<resources>
    <string name="app_name">Matching picture game</string>
    <string name="action_restart">Restart</string>
    <string name="hello_i_m_random_cat">Hello! I am random cat</string>
    <string name="win">win</string>
    <string name="congratulations"><b>Congratulations!</b> \n You win after %1$d steps</string>
    <string name="start_new">Start new</string>
    <string name="loading">Loading...</string>
    <string name="error_msg_loading">Something went wrong, please try again.</string>
</resources>
