<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        android:elevation="5dp"
        android:layout_margin="4dp">
    <ImageView
        android:layout_width="@dimen/photo_item_width"
        android:layout_height="@dimen/photo_item_height"
        android:id="@+id/itemImage"
        android:scaleType="centerCrop"
        android:contentDescription="@string/hello_i_m_random_cat"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>